fix DT-2430, chrome - image alignment and size issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1708,6 +1708,12 @@ input[type="search"]::-webkit-search-decoration {
     }
 }
 
+// Image Widget
+
+.widget.image .image-img {
+	display: inline-block;
+}
+
 // Content
 .widget.content {
 	clear: both;
